--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<img src="MoodyGirlClub.png" alt="MGC" 
-style="width:304px;height:228px;">
+<img src="MoodyGirlClub.png" alt="MGC" align="middle">
 </body>
 </html>
