--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<img src="MoodyGirlClub.png" alt="MGC" align="middle">
+<img src="MoodyGirlClub.png" alt="MGC" style="width:1024px;height:768px;" align="middle">
 </body>
 </html>
