--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<body bgcolor="#FFF8DC">
 <img src="MoodyGirlClub.png" alt="MGC" style="width:1024px;height:768px;" align="middle">
 </body>
 </html>
